[package]
name = "miracl01"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcore={path="mcore", version="0.1.0",features = ["std"]}
rand_core = { version = "0.5", features = ["std"] }
rand = "0.4"
bit-vec = "0.6"
sha2 = "0.9"
blake2 = "0.10.6"
pairing = "0.14.0"
bellman = "0.14.0"
byteorder = "1.1.0"
aes-gcm-siv = "0.9"
itertools = "0.10"

[features]
# Defines a feature named `webp` that does not enable any other features.
std = []
